--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<div class='red'>
+<styl type='text/css'>
+  body{
+  background-color:blue;
+  }
+  head{
+  backgroud-color:yellow:
+  }
+
+<div class='title'>
+  <head>
   <h1> Jollina Kim </h1>
+  </head>
 </div>
