--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<styl type='text/css'>
+<style type='text/css'>
   body{
   background-color:blue;
   }
   head{
   backgroud-color:yellow:
   }
+</style>
 
 <div class='title'>
   <head>
